# SmartStuff

smart-bus/: host_compile_smb.sh  open.sh
smart-bus/.svn/: entries
smart-bus/.svn/text-base/: compile_smb.sh.svn-base  configure.ac.svn-base
smart-bus/include/: base_class.h  common.h  debug.h
smart-bus/include/.svn/: entries
smart-bus/include/.svn/text-base/: smb_types.h.svn-base
smart-bus/lib/.svn/: entries
smart-bus/src/: 1  README
smart-bus/src/.svn/: entries
smart-bus/src/.svn/text-base/: Makefile.am.svn-base
smart-bus/src/adp/: Makefile.am
smart-bus/src/adp/.svn/: entries
smart-bus/src/adp/dvr/: adp_dvr.cpp  adp_dvr.h
smart-bus/src/adp/gps/: Makefile.am  adp_gps.h
smart-bus/src/adp/hmi/: Makefile.in
smart-bus/src/app/: Makefile.am
smart-bus/src/app/.svn/: entries
smart-bus/src/app/gps/: Makefile.am  app_gps.cpp
smart-bus/src/app/hmi/: Makefile.am  app_hmi.cpp
smart-bus/src/app/led/: Makefile.am  app_led.h
smart-bus/src/app/test/: Makefile.am  test.cpp
smart-bus/src/cmn/.svn/: entries
smart-bus/src/drv/: Makefile.am
smart-bus/src/main/: Makefile.am  app_main.cpp  app_main.h
smart-bus/src/main/.deps/.svn/: entries
smart-bus/src/main/.deps/.svn/text-base/: app_main.Po.svn-base  main.Po.svn-base
smart-bus/src/main/.svn/: entries
smart-bus/src/main/.svn/text-base/: main.cpp.svn-base
smart-bus/src/os/: Makefile.am  os_ipc.cpp  os_task.cpp  os_timer.cpp  os_timer.h
smb-HISI/: CMakeLists.txt
smb-HISI/.svn/: entries
smb-HISI/.svn/text-base/: daemon.conf.svn-base
smb-HISI/CMakeScripts/: arm-hisiv100nptl.toolchain.cmake
smb-HISI/CMakeScripts/.svn/: entries
smb-HISI/build-hisi/: cmake_install.cmake
smb-HISI/build-hisi/.svn/: entries
smb-HISI/build-hisi/src/: cmake_install.cmake
smb-HISI/lib/.svn/: entries
smb-HISI/src/: CMakeLists.txt  info.c  inter_cpu.h  sys.c  sys.h  test.h
smb-HISI/src/.svn/: entries
smb-HISI/src/.svn/text-base/: apps.c.svn-base  apps.h.svn-base  daemon.c.svn-base  debug.h.svn-base  info.h.svn-base  inter_cpu.c.svn-base  smb_types.h.svn-base  test.c.svn-base
smb-hmi/: DefaultFonts.c  UTFT.cpp
smb-hmi/.svn/: entries
smb-hmi/.svn/text-base/: UTFT.h.svn-base
smb-hmi/smb_main/: smb_hmi.cpp  smb_menu.h
smb-hmi/smb_main/.svn/: entries
(+99 files in other folders)
